--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "kattis"
 version = "0.1.0"
-description = ""
+description = "Collection of Kattis problem solutions converted to functions"
 authors = [
     {name = "kemermohammed",email = "kemmah5833@gmail.com"}
 ]
@@ -16,3 +16,8 @@ packages = [{include = "kattis", from = "src"}]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pytest (>=9.0.1,<10.0.0)"
+]
