--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,6 @@ build-backend = "poetry.core.masonry.api"
 dev = [
     "pytest (>=9.0.1,<10.0.0)",
     "coverage (>=7.11.3,<8.0.0)",
-    "pylint (>=4.0.3,<5.0.0)"
+    "pylint (>=4.0.3,<5.0.0)",
+    "black (>=25.11.0,<26.0.0)"
 ]
