--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,6 @@ dev = [
     "pytest (>=9.0.1,<10.0.0)",
     "coverage (>=7.11.3,<8.0.0)",
     "pylint (>=4.0.3,<5.0.0)",
-    "black (>=25.11.0,<26.0.0)"
+    "black (>=25.11.0,<26.0.0)",
+    "marimo (>=0.18.4,<0.19.0)"
 ]
